Bug 450881 - "Commiting changes" screen of muon lacks padding
Summary: "Commiting changes" screen of muon lacks padding
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 5.8.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-26 15:11 UTC by maty78485
Modified: 2022-04-08 16:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the "Committing Changes" screen (64.64 KB, image/png)
2022-02-26 15:11 UTC, maty78485
Details
Screenshot of the "Downloading Packages" screen (117.79 KB, image/png)
2022-02-26 15:12 UTC, maty78485
Details

Note You need to log in before you can comment on or make changes to this bug.
Description maty78485 2022-02-26 15:11:17 UTC
Created attachment 147148 [details]
Screenshot of the "Committing Changes" screen

SUMMARY

During installation of packages, Muon shows "Committing Changes" screen with information about the installation. 
This screen has no padding, which looks bad. 

STEPS TO REPRODUCE
1. Make sure you have permission to install/uninstall packages
2. Open Muon
3. Do some changes (eg. mark some package for installation)
4. Click [Apply Changes] in toolbar
5. If asked, enter your password

OBSERVED RESULT

The screen showing progress of installation has no padding (you can see it in attached screenshot), and it doesn't look good.

EXPECTED RESULT

There should be padding in the window to make it looking better. 

SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.24
KDE Plasma Version: 5.24.2
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Kernel Version: 5.13.0-30-generic (64-bit)
Graphics Platform: X11
Comment 1 maty78485 2022-02-26 15:12:58 UTC
Created attachment 147149 [details]
Screenshot of the "Downloading Packages" screen
Comment 2 Bug Janitor Service 2022-02-26 16:16:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/muon/-/merge_requests/2
Comment 3 Carlo Vanini 2022-04-08 16:38:59 UTC
Git commit 74487f4ad24c2057e355e42ac044e80fc4b69caf by Carlo Vanini, on behalf of Fire Fragment.
Committed on 08/04/2022 at 16:38.
Pushed by vanini into branch 'master'.

Add margins to TransactionWidget

When installing packages, there's a screen showing information about the installation.
It had no padding and didn't look good. This commit adds padding.
GUI:

M  +7    -0    src/MainWindow.cpp

https://invent.kde.org/system/muon/commit/74487f4ad24c2057e355e42ac044e80fc4b69caf