Add margins to TransactionWidget

When installing packages, there's a screen showing information about the installation.
It had no padding and didn't look good. This commit adds padding.

BUG: 450881
GUI: